welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value asmile
  if (asmile && bsmile) || (asmile==false && bsmile==false) {true} else {false}
      ^monkeyTrouble:2: error: not found: value bsmile
  if (asmile && bsmile) || (asmile==false && bsmile==false) {true} else {false}
                ^monkeyTrouble:2: error: not found: value ||
  if (asmile && bsmile) || (asmile==false && bsmile==false) {true} else {false}
                        ^monkeyTrouble:2: error: not found: value asmile
  if (asmile && bsmile) || (asmile==false && bsmile==false) {true} else {false}
                            ^monkeyTrouble:2: error: not found: value bsmile
  if (asmile && bsmile) || (asmile==false && bsmile==false) {true} else {false}
                                             ^