welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (asmile && bsmile) || (asmile==false && bsmile==false) {true} else {false}
}